# TP-SO-2019-Lissandra

./: .gitmodules  CMakeLists.txt  bootstrap.sh
Kernel/: CLIHandlers.c  CLIHandlers.h  Commands.c  Config.h  Criteria.c  Criteria.h  Handlers.c  Handlers.h  Kernel.c  Metadata.c  Metadata.h  Metric.c  Metric.h  PacketBuilders.h  Runner.c  Runner.h  kernel.conf
LFS/: API.c  API.h  CLIHandlers.c  CLIHandlers.h  Compactador.c  Compactador.h  Config.h  Consola.c  Consola.h  FileSystem.c  FileSystem.h  Handlers.c  Handlers.h  Lissandra.c  Lissandra.h  LissandraLibrary.c  LissandraLibrary.h  Memtable.c  Memtable.h  lissandra.conf
Memoria/: API.c  API.h  CLIHandlers.c  CLIHandlers.h  Consola.h  Frame.h  Gossip.c  Gossip.h  Handlers.c  MainMemory.c  MainMemory.h  Memoria.c  Memoria.h  Page.h  PageTable.c  PageTable.h  SegmentTable.c  SegmentTable.h  memoria.conf
Shared/Config/: Config.c  Config.h  FileWatcher.c  FileWatcher.h
Shared/Console/: Console.c  Console.h  ConsoleInput.h
Shared/Logging/: Appender.c  AppenderConsole.c  AppenderConsole.h  AppenderFile.c  LogCommon.h  LogMessage.c  LogMessage.h  Logger.c  Logger.h
Shared/Networking/: MessageBuffer.h  Packet.h  Socket.c  Socket.h
Shared/Protocol/: Handlers.c  Handlers.h  OpcodeHandler.h  Opcodes.c  Opcodes.h
Shared/Utility/: ByteConverter.h  EventDispatcher.c  EventDispatcher.h  FDIImpl.h  File.c  File.h  FileDescInterface.h  LockedQueue.h  Timer.c  Timer.h  vector.c  vector.h
Shared/libcommons/: bitarray.c  bitarray.h  config.c  config.h  dictionary.c  dictionary.h  hashmap.c  list.h  string.c  string.h
deploy/adv_kernel/: kernel.sh  lfs.sh  mem2y4.sh  step6.lql
deploy/adv_lfs/: lfs.sh
deploy/adv_mem/: lfs.sh
deploy/adv_stress/: kernel.sh  lfs.sh  mem2y4.sh  mem3y5.sh
